--- a/src/general/components/f7/Table/styles.css
+++ b/src/general/components/f7/Table/styles.css
@@ -2,3 +2,7 @@
   /* transition: all 0.3s; */
   transition: max-height 0.5s ease-out;
 }
+
+.compas-table-outline {
+  border: 1px solid var(--f7-input-outline-border-color);
+}
